[package]
name = "rustscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error = "0.1.9"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.7"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = "z"
strip = true